config validacao login

--- a/src/app/user-module/login-screen/login-screen.component.html
+++ b/src/app/user-module/login-screen/login-screen.component.html
@@ -11,8 +11,8 @@
             <img src="imgs/Chat.jpg" alt="Logo">
             <h1 class="titulo">Login</h1>
 
-            <input class="inpt" type="email" placeholder="Insira o e-mail" formControlname="email">
-            <input class="inpt" type="password" placeholder="Insira a senha" formControlname="password">
+            <input class="inpt" type="email" placeholder="Insira o e-mail" formControlName="email">
+            <input class="inpt" type="password" placeholder="Insira a senha" formControlName="password">
 
             <button class="button" (click)="onLoginClick()">Entrar</button>
 
