--- a/src/app/chat-screen/chat-screen.component.css
+++ b/src/app/chat-screen/chat-screen.component.css
@@ -1,14 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    font-family: inter;
-
-}
-
-
 .container {
 
     display: flex;
@@ -97,6 +86,7 @@
 .top i {
 
     margin-right: 12px;
+    margin-left: 12px;
 }
 
 .top a {
@@ -165,6 +155,11 @@
     border-radius: 16px;
     background-color: #F7F9FB;
     padding: 16px;
+
+}
+
+.chat i {
+    margin: 8px;
 
 }
 
