--- a/src/app/chat-screen/chat-screen.component.html
+++ b/src/app/chat-screen/chat-screen.component.html
@@ -38,7 +38,7 @@
 
                 <div class="menu-central">
                     <i class="fa-regular fa-paper-plane"></i><h1 class="title">Capabilities</h1>
-                    <button><p>Remenber what user saidearlier in the conversation.</p></button>
+                    <button><p>Remember what user saidearlier in the conversation.</p></button>
                     <button><p>Allows user to provide follow-up corrections.</p></button>
                     <button><p>Trained to decline inappropriate request.</p></button>
 
