validacoes dos campos

--- a/src/app/user-module/new-user-screen/new-user-screen.component.html
+++ b/src/app/user-module/new-user-screen/new-user-screen.component.html
@@ -19,6 +19,7 @@
 
             <input class="inpt" type="password" placeholder="Insira a senha" formControlName="password">
             <span class="login-alert">{{passwordErrorMessage}}</span>
+            <span class="login-alert">{{caracPassword}}</span>
 
             <input class="inpt" type="password" placeholder="Confirme a senha" formControlName="password2">
             <span class="login-alert">{{password2ErrorMessage}}</span>
