--- a/src/app/user-module/new-user-screen/new-user-screen.component.html
+++ b/src/app/user-module/new-user-screen/new-user-screen.component.html
@@ -11,11 +11,12 @@
             <img src="imgs/Chat.jpg" alt="Logo">
             <h1 class="titulo">Novo Usuário</h1>
 
-            <input class="inpt" type="email" placeholder="Insira o nome do Usuário" formControlName="name">           
+            <input class="inpt" placeholder="Insira o nome do Usuário" formControlName="name">           
             <span class="login-alert">{{nameErrorMessage}}</span>
             
             <input class="inpt" type="email" placeholder="Insira o e-mail" formControlName="email">
             <span class="login-alert">{{emailErrorMessage}}</span>
+            <span class="login-alert">{{newForm.validator}}</span>
 
             <input class="inpt" type="password" placeholder="Insira a senha" formControlName="password">
             <span class="login-alert">{{passwordErrorMessage}}</span>
