--- a/src/app/user-module/new-user-screen/new-user-screen.component.html
+++ b/src/app/user-module/new-user-screen/new-user-screen.component.html
@@ -16,7 +16,7 @@
             
             <input class="inpt" type="email" placeholder="Insira o e-mail" formControlName="email">
             <span class="login-alert">{{emailErrorMessage}}</span>
-            <span class="login-alert">{{newForm.validator}}</span>
+            <span class="login-alert">{{emailErrorMessage2}}</span>
 
             <input class="inpt" type="password" placeholder="Insira a senha" formControlName="password">
             <span class="login-alert">{{passwordErrorMessage}}</span>
