--- a/src/app/chat-screen/chat-screen.component.html
+++ b/src/app/chat-screen/chat-screen.component.html
@@ -1,78 +1,128 @@
 <div class="container">
-        
-        <aside class="left-panel">
 
-            <div class="top">
-    
-                <button class="new-chat"><i class="fa-solid fa-plus"></i>New Chat</button>
+    <aside class="left-panel">
 
-                @for (chat of chats; track $index) {
+        <div class="top">
 
-                    <a (click)="onChatClick(chat)">
-                    <i class="fa-regular fa-message"></i>
-                    {{ chat.chatTitle }}
-                    </a>
+            <button class="new-chat"><i class="fa-solid fa-plus"></i>New Chat</button>
+
+            @for (chat of chats; track $index) {
+
+            <a (click)="onChatClick(chat)">
+                <i class="fa-regular fa-message"></i>
+                {{ chat.chatTitle }}
+            </a>
+
+            }
+
+            <!-- <a *ngFor="let chat of chats"><i class="fa-regular fa-message"></i>{{ chat.chatTitle }}</a> -->
+
+
+
+        </div>
+        <div class="bottom">
+            <a href=""><i class="fa-solid fa-comment"></i>Clear conversations</a>
+            <a href=""><i class="fa-regular fa-lightbulb"></i>Light mode</a>
+            <a href=""><i class="fa-regular fa-user"></i>My account</a>
+            <a href=""><i class="fa-regular fa-pen-to-square"></i>Updates & FAQ</a>
+            <a href=""><i class="fa-solid fa-arrow-right-from-bracket"></i>Log out</a>
+
+
+        </div>
+
+    </aside>
+
+    <main class="central-panel">
+
+        @if(chatSelecionado == null) {
+
+        <div><img src="imgs/LOGO-CENTRAL.jpg" alt="Logo-central"></div>
+
+        <div class="examples">
+
+            <div class="menu-central">
+                <i class="fa-regular fa-comments"></i>
+                <h1 class=" title">Examples</h1>
+                <button>
+                    <p>"Explain quantum computing insimple terms"</p>
+                </button>
+                <button>
+                    <p>"Got any cretive ideas for a 10 year old`s birthday?"</p>
+                </button>
+                <button>
+                    <p>"How do I make an HTTP requestin Javascript?"</p>
+                </button>
+            </div>
+
+            <div class="menu-central">
+                <i class="fa-regular fa-paper-plane"></i>
+                <h1 class="title">Capabilities</h1>
+                <button>
+                    <p>Remember what user saidearlier in the conversation.</p>
+                </button>
+                <button>
+                    <p>Allows user to provide follow-up corrections.</p>
+                </button>
+                <button>
+                    <p>Trained to decline inappropriate request.</p>
+                </button>
+
+            </div>
+
+            <div class="menu-central">
+                <i class="fa-solid fa-triangle-exclamation"></i>
+                <h1 class="title">Limitations</h1>
+                <button>
+                    <p>May occasionally generate incorrect information.</p>
+                </button>
+                <button>
+                    <p>May occasionally produce harmful instructions or biased content.</p>
+                </button>
+                <button>
+                    <p>Limited knowledge of world and events after 2021.</p>
+                </button>
+
+            </div>
+
+        </div>
+
+        }
+
+        @if (chatSelecionado != null) {
+
+        <div class="chat-container">
+
+            <div class="chat-header">
+
+                <h2>{{ chatSelecionado.chatTitle }}</h2>
+
+            </div>
+
+            <div class="chat-messages">
+
+                @for (msg of mensagens; track $index) {
+
+                <p class="message-item" [class.chatbot]="msg.userId == `chatbot`">{{ msg.text }}</p>
 
                 }
-                
-                <!-- <a *ngFor="let chat of chats"><i class="fa-regular fa-message"></i>{{ chat.chatTitle }}</a> -->
-                
-                
-
-            </div>
-            <div class="bottom">
-                <a href=""><i class="fa-solid fa-comment"></i>Clear conversations</a>
-                <a href=""><i class="fa-regular fa-lightbulb"></i>Light mode</a>
-                <a href=""><i class="fa-regular fa-user"></i>My account</a>
-                <a href=""><i class="fa-regular fa-pen-to-square"></i>Updates & FAQ</a>
-                <a href=""><i class="fa-solid fa-arrow-right-from-bracket"></i>Log out</a>
-
 
             </div>
 
-        </aside>
-        
-        <main class="central-panel">
+        </div>
 
-            <div><img src="imgs/LOGO-CENTRAL.jpg" alt="Logo-central"></div>
-
-            <div class="examples">
-
-                <div class="menu-central">
-                    <i class="fa-regular fa-comments"></i><h1 class=" title">Examples</h1>
-                    <button><p>"Explain quantum computing insimple terms"</p></button>
-                    <button><p>"Got any cretive ideas for a 10 year old`s birthday?"</p></button>
-                    <button><p>"How do I make an HTTP requestin Javascript?"</p></button>
-                </div>
-
-                <div class="menu-central">
-                    <i class="fa-regular fa-paper-plane"></i><h1 class="title">Capabilities</h1>
-                    <button><p>Remember what user saidearlier in the conversation.</p></button>
-                    <button><p>Allows user to provide follow-up corrections.</p></button>
-                    <button><p>Trained to decline inappropriate request.</p></button>
-
-                </div>
-
-                <div class="menu-central">
-                    <i class="fa-solid fa-triangle-exclamation"></i><h1 class="title">Limitations</h1>
-                    <button><p>May occasionally generate incorrect information.</p></button>
-                    <button><p>May occasionally produce harmful instructions or biased content.</p></button>
-                    <button><p>Limited knowledge of world and events after 2021.</p></button>
-                    
-                </div>
-
-            </div>
-
-            <div class="chat">
-                <i class="fa-solid fa-microphone"></i>
-                <i class="fa-solid fa-image"></i>
-                <input class="input" type="text" placeholder="Type message">
-                <i class="fa-solid fa-paper-plane"></i>
-
-            </div>
+        }
 
 
-        </main>
 
-    </div>
+        <div class="chat">
+            <i class="fa-solid fa-microphone"></i>
+            <i class="fa-solid fa-image"></i>
+            <input [formControl]="mensagemUsuario" class="input" type="text" placeholder="Type message">
+            <i class="fa-solid fa-paper-plane" (click)=""enviarMensagem></i>
 
+        </div>
+
+
+    </main>
+
+</div>
