conexao com gemini

--- a/src/app/chat-screen/chat-screen.component.html
+++ b/src/app/chat-screen/chat-screen.component.html
@@ -118,7 +118,7 @@
             <i class="fa-solid fa-microphone"></i>
             <i class="fa-solid fa-image"></i>
             <input [formControl]="mensagemUsuario" class="input" type="text" placeholder="Type message">
-            <i class="fa-solid fa-paper-plane" (click)=""enviarMensagem></i>
+            <i class="fa-solid fa-paper-plane" (click)="enviarMensagem()"></i>
 
         </div>
 
