ajuste da finalizacao

--- a/src/app/chat-screen/chat-screen.component.html
+++ b/src/app/chat-screen/chat-screen.component.html
@@ -21,10 +21,10 @@
 
         </div>
         <div class="bottom">
-            <a href=""><i class="fa-solid fa-comment"></i>Clear conversations</a>
+            <!-- <a href=""><i class="fa-solid fa-comment"></i>Clear conversations</a>
             <a href=""><i class="fa-regular fa-lightbulb"></i>Light mode</a>
             <a href=""><i class="fa-regular fa-user"></i>My account</a>
-            <a href=""><i class="fa-regular fa-pen-to-square"></i>Updates & FAQ</a>
+            <a href=""><i class="fa-regular fa-pen-to-square"></i>Updates & FAQ</a> -->
             <a href="" (click)="deslogar()"><i class="fa-solid fa-arrow-right-from-bracket"></i>Log out</a>
 
 
