ajustes de responsividade

--- a/src/app/user-module/login-screen/login-screen.component.html
+++ b/src/app/user-module/login-screen/login-screen.component.html
@@ -2,8 +2,8 @@
  
  <main class="page-container">
         <div class="robo-image">
-
-            <img class="robo-image" src="imgs/Robo-gpt.jpg" alt="Robo GPT">
+<!-- 
+            <img class="robo-image" src="imgs/Robo-gpt.jpg" alt="Robo GPT"> -->
 
         </div>
 
@@ -21,6 +21,7 @@
 
             <span class="login-alert">{{loginSuccessful}}</span>
             <span class="login-alert">{{loginFail}}</span>
+            
 
 
         </div>
