--- a/src/app/user-module/new-user-screen/new-user-screen.component.html
+++ b/src/app/user-module/new-user-screen/new-user-screen.component.html
@@ -3,7 +3,7 @@
  <main class="page-container">
         <div class="robo-image">
 
-            <img class="robo-image" src="imgs/new-user.jpg" alt="Robo GPT">
+            <!-- <img class="robo-image" src="imgs/new-user.jpg" alt="Robo GPT"> -->
 
         </div>
 
