--- a/src/app/user-module/login-screen/login-screen.component.css
+++ b/src/app/user-module/login-screen/login-screen.component.css
@@ -19,7 +19,7 @@
 }
 
 .robo-image {
-
+    background-image: url("/imgs/Robo-gpt.jpg");
     background-size:cover;
     background-position: 0px -100px;
     
@@ -90,3 +90,31 @@
     transform: translateY(18px);
 }
 
+@media screen and (max-width: 768px) { /*tamanho padrao de tela de celular*/
+    
+    .robo-image {
+
+        display: none;
+    }
+    .login-container {
+
+        width: 100vw;
+    }
+    
+}
+
+@media screen and (max-width: 1000px) {
+
+    .robo-image {
+
+        background-position: center;
+    }
+
+
+}
+
+@media screen and (max-width: 1366px) {
+
+
+
+}
