--- a/src/app/user-module/new-user-screen/new-user-screen.component.css
+++ b/src/app/user-module/new-user-screen/new-user-screen.component.css
@@ -9,7 +9,9 @@
 
 .robo-image {
 
-    background-size:cover;
+    /* background-image: url("/imgs/Robo-gpt.jpg"); */
+    background-image: url("/imgs/new-user.jpg");
+    background-size: cover;
     background-position: 0px -100px;
     
     width: 50vw; /*50% da largura do monitor*/
@@ -71,5 +73,35 @@
     color: red;
     font-size: 12px;
     transform: translateY(-16px);
+}
+
+@media screen and (max-width: 1000px) {
+
+    .robo-image {
+
+        background-position: center;
+        width: 30vw;
+        
+    }
+
+    .login-container h1 {
+        font-size: 50px;
+    }
+
+
+}
+
+@media screen and (max-width: 768px) { /*tamanho padrao de tela de celular*/
+    
+    .robo-image {
+
+        display: none;
+    }
+    .login-container {
+
+        width: 50vw;
+        
+    }
+    
 }
 
