--- a/src/app/chat-screen/chat-screen.component.css
+++ b/src/app/chat-screen/chat-screen.component.css
@@ -99,7 +99,7 @@
 
 .bottom {
     width: 100%;
-    min-height: 200px;
+    min-height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -113,10 +113,10 @@
     margin-right: 12px;
 }
 
-.bottom a {
+.bottom button {
 
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 12px;
 }
 
@@ -128,6 +128,7 @@
     height: 40px;
     font-weight: 400;
     border: none;
+    margin: 12px;
 
 }
 
@@ -226,4 +227,77 @@
   color: white;
   background: #000;
 
+}
+
+::ng-deep body.dark-mode .left-panel {
+
+    background-color: #000 !important;
+    
+}
+
+::ng-deep body.dark-mode .new-chat {
+
+    background-color: white;
+    color: black !important;
+
+}
+
+::ng-deep body.dark-mode .central-panel { 
+    background-color: black;
+}
+
+::ng-deep body.dark-mode .menu-central {
+
+    background-color: black;
+}
+
+
+::ng-deep body.dark-mode .menu-central i {
+
+    color: white;
+}
+
+::ng-deep body.dark-mode .title {
+    color: #ccc;
+  
+}
+
+::ng-deep body.dark-mode .menu-central button {
+
+    background-color: black !important;
+}
+
+::ng-deep body.dark-mode .menu-central p {
+
+    color: white;
+}
+
+::ng-deep body.dark-mode .chat {
+
+    color: #ccc;
+    background-color: #000;
+
+}
+
+::ng-deep body.dark-mode .chat-container {
+
+    color: #ccc;
+
+}
+
+::ng-deep body.dark-mode .input {
+
+    color: #ccc;
+}
+
+
+::ng-deep body.dark-mode .top a {
+
+    color: #ccc !important;
+
+}
+
+::ng-deep body.dark-mode .message-item {
+
+    color: black;
 }
