--- a/src/app/chat-screen/chat-screen.component.html
+++ b/src/app/chat-screen/chat-screen.component.html
@@ -25,7 +25,8 @@
             <a href=""><i class="fa-regular fa-lightbulb"></i>Light mode</a>
             <a href=""><i class="fa-regular fa-user"></i>My account</a>
             <a href=""><i class="fa-regular fa-pen-to-square"></i>Updates & FAQ</a> -->
-            <a href="" (click)="deslogar()"><i class="fa-solid fa-arrow-right-from-bracket"></i>Log out</a>
+            <button class= "new-chat" (click)="ligaDesligaDarkMode()">Modo escuro</button>
+            <button class= "new-chat" href="" (click)="deslogar()"><i class="fa-solid fa-arrow-right-from-bracket"></i>Log out</button>
 
 
         </div>
@@ -36,7 +37,7 @@
 
         @if(chatSelecionado == null) {
 
-        <div><img src="imgs/LOGO-CENTRAL.jpg" alt="Logo-central"></div>
+        <div><img [src]="darkMode ==true? 'imgs/Chat.png' : 'imgs/LOGO-CENTRAL.png'" alt="Logo-central"></div>
 
         <div class="examples">
 
